# news_analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  send_email.py  sources.yaml  task1_collector.py  task2_reporter.py
.backup_before_cleanup/: run_collect.py  run_db_migration.py  run_now.py  run_report.py
.backup_before_cleanup/config/: __init__.py
.backup_before_cleanup/processors/: combined_processor.py  data_validator.py  field_normalizer.py  heat_processor.py  lightweight_classifier.py
.claude/: settings.local.json
.github/workflows/: collect.yml  send_email.yml
commercial/: README.md
commercial/commercial/: COMMERCIAL_CODE_CHANGES.md  COMMERCIAL_DESIGN.md  COMMERCIAL_IMPLEMENTATION_PLAN.md  INDEX.md  MVP_IMPLEMENTATION_PLAN.md  MVP_SRS.md  MVP_TECHNICAL_DESIGN.md  MVP_VALIDATION_PLAN.md
commercial/compliance/: __init__.py  __init__.py.bak  ai_sensitive_checker.py  ai_sensitive_checker.py.bak  content_filter.py  content_filter.py.bak  field_mapper.py  field_mapper.py.bak  keywords.yaml  source_filter.py  source_filter.py.bak
commercial/config/: sources_commercial.yaml
commercial/scripts/: run_mvp_full.py  run_mvp_full.py.bak  run_mvp_pipeline.py  run_mvp_pipeline.py.bak  run_web.py  run_web.py.bak
commercial/services/: __init__.py  __init__.py.bak  email_service.py  email_service.py.bak
commercial/subscription/: __init__.py  __init__.py.bak  subscriber_manager.py  subscriber_manager.py.bak
commercial/web/: __init__.py  __init__.py.bak  app.py  app.py.bak
core/collector/: __init__.py  api_sources.py  parser.py  sources.py  unified_collector.py
core/config/: __init__.py  core_config.yaml  loader.py  manager.py  parsing_rules.example.yaml  report_templates.py  report_templates.yaml
core/filters/: __init__.py  ai_filter_agent.py  deduplication.py  source_validator.py
core/models/: __init__.py  data_models.py
core/processor/: __init__.py  ai_fallback_extractor.py  ai_processor.py  article_fetcher.py  chart_data_service.py  combined_processor.py  content_parser.py  data_validator.py  depth_analyzer.py  field_normalizer.py  heat_processor.py  heat_scorer.py  history_relation_engine.py  history_relation_engine_bge3.py  history_relation_engine_fulltext.py  investment_advisor.py  lightweight_classifier.py  token_counter.py
core/scheduler/: __init__.py  task_scheduler.py
core/storage/: __init__.py  baseline.py  database.py  file_manager.py  storage_manager.py
core/utils/: __init__.py  api_optimizer.py  cache.py  chart_generator.py  collection_config.py  defaults.py  email_sender.py  error_handling.py  errors.py  heartbeat.py  hotboard_fetcher.py  hotboard_manager.py  http_client.py  incremental_tracker.py  log_utils.py  logging_config.py  market_data_fetcher.py  md2pdf.py  monitoring.py  performance.py  proxy_config.py  security.py  source_scorer.py  task_lock.py  text_utils.py  workflow_timer.py
docs/: CLOUD_DEPLOYMENT_TUTORIAL.md  CLOUD_MIGRATION_CHECKLIST.md  DEPLOYMENT.md  FIX_BATCH_2026-04-08.md  PHASE_B_DEV_GUIDE.md  README.md  WEB_FEEDBACK_SYSTEM_DESIGN.md  WORKFLOW_V3.md
docs/archive/: spec.md  (+17 more)
scripts/: analyze_source_effectiveness.py  cache_health_check.py  check_duplicate_stats.py  cleanup_duplicate_news.sql
tests/: README.md  __init__.py  conftest.py  test_gap_driven_architecture.py  test_smart_backtrack.py
开发文档/: DATA_FIELDS_REFERENCE.md  Layer1_模块层文档.md  Layer2_函数层文档.md  Layer3_字段层文档.md  Layer4_关联层文档.md  Layer5_整合层文档.md  MODULE_REFERENCE.md  工作流架构评估报告.md  阶段一_文档生成工作记录.md
(+140 files in other folders)
